# LizyML-Widget

./: .editorconfig  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  BLUEPRINT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HISTORY.md  LICENSE  Makefile  PLAN.md  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: auto-release.yml  ci.yml  publish.yml  release.yml
docs/: VERSION_COMPAT.md
docs/mockups/: blocked_group_kfold.html
docs/proposals/: lizyml-multiclassova-auc-fix.md
js/: eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
js/coverage/: clover.xml  coverage-final.json  index.html  useJobPolling.ts.html  useModel.ts.html  usePlot.ts.html  useTheme.ts.html
js/src/: App.tsx  index.tsx  widget.css
js/src/__tests__/: BoundaryExpansionPanel.test.tsx  ConfigFooter.test.tsx  ConfigTab-guards.test.tsx  ConvergenceSignal.test.tsx  DataTab.test.tsx  DynForm.test.tsx  InnerValidFilter.test.tsx  ProgressView.test.tsx  ResultsTab-guards.test.tsx  RetuneControls.test.tsx  ScoreHistoryChart.test.tsx  SearchSpace.test.tsx  StickyTabs.test.tsx  mock-model.test.ts  mock-model.ts  useJobPolling-colab.test.ts  useJobPolling.test.ts  useModel.test.ts  usePlot-metrics.test.ts  usePlot.test.ts  useTheme.test.ts
js/src/components/: Accordion.tsx  BlockedGroupKFold.tsx  BoundaryExpansionPanel.tsx  ColumnTable.tsx  ConfigFooter.tsx  ConvergenceSignal.tsx  DistributionBar.tsx  DynForm.tsx  FoldPreview.tsx  Header.tsx  ModelEditors.tsx  NumericStepper.tsx  ParamsTable.tsx  PlotViewer.tsx  PredTable.tsx  ProgressView.tsx  RetuneControls.tsx  ScoreHistoryChart.tsx  ScoreTable.tsx  SearchSpace.tsx
js/src/hooks/: useJobPolling.ts  useModel.ts  usePlot.ts  useTheme.ts
js/src/tabs/: ConfigTab.tsx  DataTab.tsx  FitSubTab.tsx  ResultsTab.tsx  TuneSubTab.tsx  configHelpers.ts
notebooks/: diag_colab_compat.ipynb  diag_colab_fit.ipynb  tutorial.ipynb  tutorial_binary.ipynb  tutorial_multiclass.ipynb  tutorial_regression.ipynb
scripts/: release.py
src/lizyml_widget/: __init__.py  _subprocess_entry.py  adapter.py  adapter_contract.py  adapter_params.py  adapter_schema.py  openmp_detect.py  service.py  subprocess_runner.py  types.py  widget.py
src/lizyml_widget/static/: widget.css  widget.js
tests/: conftest.py  test_adapter.py  test_adapter_config.py  test_adapter_core.py  test_adapter_schema.py  test_adapter_tune.py  test_blocked_group_kfold.py  test_codegen.py  test_config_generation_bugs.py  test_contract_cv.py  test_css_contrast.py  test_e2e.py  test_frontend_contract.py  test_inference_plots.py  test_inner_valid_constraint.py  test_learning_curve_metric_e2e.py  test_learning_curve_widget_e2e.py  test_load_model.py  test_model_metric_validity.py  test_openmp_detect.py  test_plot_binary_buffer.py  test_plot_metrics_filter.py  test_plot_request_id.py  test_precision_at_k_param.py  test_retune_launcher.py  test_retune_monitoring.py  test_service.py  test_service_config.py  test_subprocess_integration.py  test_subprocess_runner.py  test_thread_safety.py  test_tune_cancel.py  test_widget_action_msg.py  test_widget_actions.py  test_widget_api.py  test_widget_config.py  test_widget_core.py  test_widget_jobs.py  test_widget_poll.py  test_widget_robustness.py
tests/css_contrast/: __init__.py  contrast.py  parser.py
tests/e2e/: conftest.py  test_learning_curve.ipynb  test_learning_curve_plots.py  test_parameter_changes.py  test_user_flows.py  test_visual_regression.py  test_widget.ipynb
