[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lizyml-widget"
version = "0.1.0"
description = "Jupyter Notebook / Google Colab / VS Code Notebooks widget for LizyML"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "NBX" }]
keywords = ["jupyter", "widget", "lightgbm", "automl", "machine-learning", "anywidget"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "anywidget>=0.9",
    "traitlets>=5.0",
    "pandas>=1.5",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/nbx-liz/LizyML-Widget"
Repository = "https://github.com/nbx-liz/LizyML-Widget"

[project.optional-dependencies]
lizyml = ["lizyml[plots,tuning,calibration,explain]"]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
    "mypy>=1.0",
    "jupyterlab>=4.0",
    "pandas-stubs>=2.0",
    "lizyml[plots,tuning,calibration,explain]",
    "watchfiles>=1.1",
]

[tool.hatch.build]
artifacts = ["src/lizyml_widget/static/**"]

[tool.hatch.build.targets.wheel]
packages = ["src/lizyml_widget"]

[tool.ruff]
target-version = "py310"
line-length = 100
exclude = ["notebooks/"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = false
packages = ["lizyml_widget"]
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "vulture>=2.15",
]

