[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "lizyml-widget"
dynamic = ["version"]
description = "Jupyter Notebook / Google Colab / VS Code Notebooks widget for LizyML"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "NBX" }]
keywords = ["jupyter", "widget", "lightgbm", "automl", "machine-learning", "anywidget"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "anywidget>=0.9",
    "traitlets>=5.0",
    "pandas>=1.5",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/nbx-liz/LizyML-Widget"
Repository = "https://github.com/nbx-liz/LizyML-Widget"

[project.optional-dependencies]
# Pin lizyml to the exact minor range this widget version understands.
# The upper bound is excluded so that new minor releases with potentially
# incompatible type/contract changes do not silently break the widget.
# See docs/VERSION_COMPAT.md for the full compatibility matrix.
lizyml = ["lizyml[plots,tuning,calibration,explain]>=0.9.0,<0.10"]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
    "mypy>=1.0",
    "jupyterlab>=4.0",
    "ipykernel>=6.0",
    "pandas-stubs>=2.0",
    "lizyml[plots,tuning,calibration,explain]>=0.9.0,<0.10",
    "scikit-learn>=1.0",
    "watchfiles>=1.1",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/lizyml_widget/_version.py"

[tool.hatch.build]
artifacts = ["src/lizyml_widget/static/**"]

[tool.hatch.build.targets.wheel]
packages = ["src/lizyml_widget"]

[tool.ruff]
target-version = "py310"
line-length = 100
exclude = ["notebooks/"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = false
packages = ["lizyml_widget"]
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--ignore=tests/e2e"
markers = ["e2e: end-to-end tests requiring Jupyter server and Playwright"]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.4",
    "mypy>=1.0",
    "jupyterlab>=4.0",
    "ipykernel>=6.0",
    "pandas-stubs>=2.0",
    "lizyml[plots,tuning,calibration,explain]>=0.9.0,<0.10",
    "scikit-learn>=1.0",
    "watchfiles>=1.1",
    "twine>=6.2.0",
    "vulture>=2.15",
    "pre-commit>=4.5.1",
    "pytest-playwright>=0.7.2",
    "playwright>=1.58.0",
    "requests>=2.32.5",
]

